# guru

./: .dockerignore  .env.example  .npmrc  BROWSER_AUTOMATION_TEST_RESULTS.md  Dockerfile  FLOGURU_PROJECT_SNAPSHOT.md  FOUNDATION_CHECKPOINT.md  PHASE1_IMPLEMENTATION.md  README.md  RECOVERY_SUMMARY.md  SPRINT0_COMPLETE.md  browser-use.Dockerfile  docker-compose.yml  ds_body.json  errors.txt  errors_v2.txt  errors_v3.txt  launch_guru.bat  nixpacks.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  poll_status.js  smoke_output.txt  test_http.js  test_output.txt  test_request.json
apps/api/: .gitignore  Dockerfile  Dockerfile.browser  README-BROWSER.md  antigravity_browser.py  available_models.txt  diag_output.txt  diag_v2.txt  diag_v3.txt  diagnose_ai.js  diagnose_ds.js  diagnose_ds_ext.js  diagnose_ds_strict.js  list_google_models.js  package.json  pyproject.toml  requirements.txt  test-ai-service.ts  test-deepseek-raw.js  test-google-methods.ts  test-google-raw.js  test-payload.js  test-sdk-methods.ts  test_gemini.js  test_gemini_2.js  test_google.js  tsconfig.json  vitest.config.ts
apps/api/scripts/: seed-initial-content.ts  verify-skills.ts  verify_skill_mounting.js  verify_skill_mounting.ts
apps/api/src/: check_executions_table.py  check_gurus_columns.py  e2e_test.ts  index.ts  simple_test.py  test_complete.py  test_db_connection.py  test_final.py  test_full_integration.py  test_integration_fixed.py
apps/api/src/agents/: guru-agent.ts
apps/api/src/core/: guru_orchestrator.py
apps/api/src/integrations/: browserUseVNext.ts
apps/api/tests/: smoke-test.ts
(+161 files in other folders)
